--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <link href="style.css" rel="stylesheet" />
   </head>
   <body>
-    <h1>Example Student's HCDE 439 Physical Computing Page!</h1>
+    <h1>Zane Isley's HCDE 439 Physical Computing Page!</h1>
 
     <div class="header">
-      <img src="red-panda.jpg" />
+      <img src="IMG_3309.jpg" />
       <p>
-        My name is Example Student! I'm an HCDE major and definitely not a red
-        panda. I am excited to learn the following things in this class: how to
-        be a real student, and how to change my name.
+        Hey y'all, my name is Zane and I am a 4th year HCDE student. I am also a
+        Disability Studies minor and design chair for HuskyADAPT, so topics of
+        accessability and design justice are of the upmost importance to me!
       </p>
     </div>
 
