--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Zane Isley's HCDE 439 Physical Computing Page!</h1>
 
     <div class="header">
-      <img src="IMG_3309.jpg" />
+      <img src="zane.jpg" />
       <p>
         Hey y'all, my name is Zane and I am a 4th year HCDE student. I am also a
         Disability Studies minor and design chair for HuskyADAPT, so topics of
@@ -24,7 +24,7 @@
       <div class="assignment">
         <a href="a1.html">
           <h2>Assignment 1: Blink!</h2>
-          <img src="red-panda.jpg" />
+          <img src="circuit-lit.jpg" />
         </a>
         <p>Assignment 1 was a panda!</p>
       </div>
