--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <h2>Assignment 1: Blink!</h2>
           <img src="circuit-lit.jpg" />
         </a>
-        <p>Assignment 1 was a panda!</p>
+        <p>Assignment 1 was to create a fun blinking pattern!</p>
       </div>
 
       <div class="assignment">
