--- a/index.html
+++ b/index.html
@@ -32,9 +32,12 @@
       <div class="assignment">
         <a href="a2.html">
           <h2>Assignment 2: Fade!</h2>
-          <img src="red-panda.jpg" />
+          <img src="A2.jpg" />
         </a>
-        <p>Assignment 2 was a panda!</p>
+        <p>
+          Assignment 2 was to use blinking and fading LEDs!
+          (I made a primary color picker)
+        </p>
       </div>
 
       <div class="assignment">
