Updated Home Page, finalized A3

--- a/a3.html
+++ b/a3.html
@@ -48,7 +48,7 @@
         <div>
           <h2>Circuit Operation:</h2>
           <div class="header">
-            <img src="fading.gif" />
+            <img src="thermometer.gif" id = "vgraph"/>
           </div>
           <p>
             For this assignment, we were challanged to create a device that uses input and output
