--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="grid">
       <div class="assignment">
         <a href="a1.html">
-          <h2>Assignment 1: Blink!</h2>
+          <h2>A1: Blink!</h2>
           <img src="circuit-lit.jpg" />
         </a>
         <p>Assignment 1 was to create a fun blinking pattern!</p>
@@ -31,7 +31,7 @@
 
       <div class="assignment">
         <a href="a2.html">
-          <h2>Assignment 2: Fade!</h2>
+          <h2>A2: Fade!</h2>
           <img src="A2.jpg" />
         </a>
         <p>
@@ -42,10 +42,12 @@
 
       <div class="assignment">
         <a href="a3.html">
-          <h2>Assignment 3: Input Output!</h2>
+          <h2>A3: Input Output!</h2>
           <img src="A3.jpg" />
         </a>
-        <p>Assignment 2 was a panda!</p>
+        <p>Assignment 3 was to use a combination of input sensors and output
+          devices to make a device denoting change in temp (or light)!
+        </p>
       </div>
     </div>
   </body>
