additional finishing touches

--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
           <h2>A4: Libraries!</h2>
           <img src="assets/A4.jpg" />
         </a>
-        <p>Assignment 1 was to create a fun blinking pattern!</p>
+        <p>For assignment 4, we had to use a combination of input and output
+          devices, AND two libraries, to make a device. I made a PIN lock.
+        </p>
       </div>
 
       <div class="assignment">
