Completed A5 and linked to home page.

--- a/index.html
+++ b/index.html
@@ -64,12 +64,13 @@
       </div>
 
       <div class="assignment">
-        <a href="a4.html">
+        <a href="a5.html">
           <h2>A5: High(er) Voltage!</h2>
-          <img src="assets/red-panda.jpg" />
+          <img src="assets/a5.jpg" />
         </a>
         <p>
-
+          For assignment 5, we had to use an external power supply to power
+          something too strong for our arduinos.
         </p>
       </div>
 
