Fixed broken image link

--- a/a5.html
+++ b/a5.html
@@ -186,7 +186,7 @@
             diode, and capacitors between power and ground. Find parts with datasheets you could
             use for each of these schematic components.
           </h4>
-          <img src="assets/a5q2.jpg" />
+          <img src="assets/a5q2.JPG" />
           <p>
             The datasheets used are as follows:<br>
             <a href="https://www.diodes.com/assets/Datasheets/DMT6009LCT.pdf">MOSFET Transistor</a> <br>
