--- a/index.html
+++ b/index.html
@@ -75,12 +75,13 @@
       </div>
 
       <div class="assignment">
-        <a href="a4.html">
+        <a href="a6.html">
           <h2>A6: Talking to the Web!</h2>
-          <img src="assets/red-panda.jpg" />
+          <img src="assets/a6.jpg" />
         </a>
         <p>
-
+          For a6 we had to create a circuit that could communicate with the web.
+          I made an Etch a Sketch.
         </p>
       </div>
     </div>
