Uploaded final documentation and attatched necessary media!

--- a/a1.html
+++ b/a1.html
@@ -15,7 +15,7 @@
         <div>
           <h2>Circuit Schematic:</h2>
           <div class="header">
-            <img src="assets/A1-schematic.jpg" />
+            <img src="assets/A1-schematic.JPG" />
           </div>
           <p>
             The circuit schematic for A1 was created using "www.circuit-diagram.org"
