--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
       </p>
     </div>
 
+    <div class="assignment">
+      <a href="final.html">
+        <h2>HCDE 439 Final (O-Bin)</h2>
+        <img src="assets/final.jpg" />
+      </a>
+      <p>Check out my final project here!</p>
+    </div>
+
     <div class="grid">
       <div class="assignment">
         <a href="a1.html">
